# hfnum

./: CMakeLists.txt  README.md  doxygen.txt
calculate_HF_output/: README.md  results_B0.txt  results_Be0.txt  results_C0.txt  results_F0.txt  results_H0.txt  results_He0.txt  results_Li0.txt  results_Mg0.txt  results_N0.txt  results_Na0.txt  results_Ne0.txt  results_O0.txt
calculations/: Angular coefficients Hartree-Fock numerical.ipynb
docs/html/: Basis_8cxx.html  Basis_8cxx__incl.map  Basis_8cxx__incl.md5  Basis_8cxx_source.html  Basis_8h.html  Basis_8h__dep__incl.map  Basis_8h__dep__incl.md5  Basis_8h__incl.map  Basis_8h__incl.md5  Basis_8h_source.html  DFT_8cxx.html  DFT_8cxx__incl.map  DFT_8cxx__incl.md5  DFT_8cxx_source.html  DFT_8h.html  DFT_8h__dep__incl.map  DFT_8h__dep__incl.md5  (+448 more)
include/: Basis.h  DFT.h  GTO.h  Grid.h  HF.h  HFException.h  HFMatrix.h  HFPy.h  HFS.h  IterativeGordonSolver.h  IterativeGreenSolver.h  IterativeRenormalisedSolver.h  IterativeStandardMatrixSolver.h  IterativeStandardSolver.h  LinearSystemBuilder.h  MatrixSCF.h  NonCentralCorrection.h  Orbital.h  OrbitalMapper.h  PerturbativeCorrection.h  RHF.h  SCF.h  STO.h  SpinOrbitCorrection.h  StateReader.h  units.h  utils.h
output/: results_B+.txt  results_B.txt  results_B_dft.txt  results_B_hfs.txt  results_Be.txt  results_Be_dft.txt  results_C.txt  results_C_hfs.txt  results_F.txt  results_F_hfs.txt  results_H.txt  results_H_2p.txt  results_H_dft.txt  results_He.txt  results_He_dft.txt  results_He_hfs.txt  results_Li.txt  results_Li_dft.txt  results_N.txt  results_Na.txt  results_Ne.txt  results_O.txt
share/: calculate_HF.py  load_and_apply_spin_orbit_correction.py  load_and_correct_result.py  load_result.py  load_result_dft.py  test.py  test_B+.py  test_B.py  test_B_dft.py  test_B_hfs.py  test_Be.py  test_Be_dft.py  test_C+.py  test_C.py  test_C1.py  test_C2.py  test_C_hfs.py  test_F.py  test_F_hfs.py  test_H.py  test_H_2p.py  test_H_dft.py  test_H_extraBasis.py  test_H_iss.py  test_He.py  test_He_dft.py  test_He_hfs.py  test_He_iss.py  test_Li.py  test_Li_dft.py  test_Li_extraBasis.py  test_Li_iss.py  test_N.py  test_N_hfs.py  test_Ne.py  test_Ne_hfs.py  test_O.py  test_O_hfs.py  test_RHF_H.py
src/: Basis.cxx  CMakeLists.txt  DFT.cxx  GTO.cxx  Grid.cxx  HF.cxx  HFException.cxx  HFMatrix.cxx  HFPy.cxx  HFS.cxx  IterativeGordonSolver.cxx  IterativeGreenSolver.cxx  IterativeRenormalisedSolver.cxx  IterativeStandardMatrixSolver.cxx  IterativeStandardSolver.cxx  LinearSystemBuilder.cxx  Makefile  MatrixSCF.cxx  NonCentralCorrection.cxx  Orbital.cxx  OrbitalMapper.cxx  PerturbativeCorrection.cxx  RHF.cxx  SCF.cxx  STO.cxx  SpinOrbitCorrection.cxx  StateReader.cxx  hfnum.cxx  utils.cxx
(+9 files in other folders)
